# pinn_lid_driven_cavity

./: .gitignore  README.md  pyproject.toml
data/cavity_20/: cavity_20_full.csv  lid_driven_cavity_20.csv
data/cavity_40/: cavity_40_full.csv  lid_driven_cavity_40.csv
data/cavity_80/: cavity_80_full.csv  lid_driven_cavity_80.csv
data/prepared/: cavity20_bc.parquet  cavity20_full_norm.parquet  cavity20_interior.parquet  cavity20_pinn_pack.npz  cavity80_bc.parquet  cavity80_full_norm.parquet  cavity80_interior.parquet
notebook/: lid_driven_pipeline.ipynb
outputs/models/: mlp_uv_cavity20.pt
src/mlp/: common.py  eval_mlp.py  plot_centerline.py  train_mlp.py
src/utils/: consolidar_full_vtm.py  etl_datasets.py  paraview_datasets.py  valida_datasets.py
